- Updated manifest file for diazo theme

--- a/plonetheme/redmusic/static/manifest.cfg
+++ b/plonetheme/redmusic/static/manifest.cfg
@@ -1,5 +1,5 @@
 [theme]
-title = Plonetheme Redmusic
+title = Redmusic
 description = Redmusic Theme with plone.app.theming
 author = Giacomo Spettoli
 preview = preview.png
